# oceanbase-plugin-dev-kit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  gh-pages.yml
cmake/: FetchOceanBase.cmake  Pack.cmake
docs/conf/: Doxyfile  doxy_header.html  mkdocs.yml
docs/zh/: add-new-plugin.md  how-to-build.md  how-to-dev.md  index.md  user-guide.md
docs/zh/changelog/: v0.1.0.md
src/: CMakeLists.txt
src/examples/ftparser/: CMakeLists.txt  space_ftparser.cpp
src/lib/: Config.cmake.in  ObPluginLib.cmake  ob_plugin_libmain.c
tools/: build-rpm.sh
